test/fail/vt_07.v3
//@execute (0,0)=15; (0,1)=9; (0,2)=9; (0,3)=9; (1,1)=15; (1,2)=9; (1,3)=9; (2,2)=15; (2,3)=9; (3,3)=15
type vt_07<T> {
	case X(i: T);
	case Y(i: T);
}
def compare<X>(x: vt_07<X>, y: vt_07<X>) -> int {
	return
		if(x == x, 0b0001) |
		if(x == y, 0b0010) |
		if(y == x, 0b0100) |
		if(y == y, 0b1000);
}
def xx = [vt_07.X(11), vt_07.Y(11), vt_07.X(12), vt_07.Y(12)];
def main(a: int, b: int) -> int {
	return compare(xx(a), xx(b));
}
